Changes
=======

1.1.0 (1010-05-12)
------------------

New Features:

- Transaction managers and the transaction module can be used with the
  with statement to define transaction boundaries, as in::

     with transaction:
         ... do some things ...

  See transaction/tests/convenience.txt for more details.

- There is a new iterator function that automates dealing with
  transient errors (such as ZODB confict errors). For example, in::

     for attempt in transaction.attempts(5):
         with attempt:
             ... do some things ..

  If the work being done raises transient errors, the transaction will
  be retried up to 5 times.

  See transaction/tests/convenience.txt for more details.

Bugs fixed:

- Fixed a bug that caused extra commit calls to be made on data
  managers under certain special circumstances.

  https://mail.zope.org/pipermail/zodb-dev/2010-May/013329.html

- When threads were reused, transaction data could leak accross them,
  causing subtle application bugs.

  https://bugs.launchpad.net/zodb/+bug/239086

1.0.1 (2010-05-07)
------------------

- LP #142464:  remove double newline between log entries:  it makes doing
  smarter formatting harder.

- Updated tests to remove use of deprecated ``zope.testing.doctest``.

1.0.0 (2009-07-24)
------------------

- Fix test that incorrectly relied on the order of a list that was generated
  from a dict.

- Remove crufty DEPENDENCIES.cfg left over from zpkg.

1.0a1 (2007-12-18)
------------------

= Initial release, branched from ZODB trunk on 2007-11-08 (aka
  "3.9.0dev").

- Remove (deprecated) support for beforeCommitHook alias to
  addBeforeCommitHook.

- Add weakset tests.

- Remove unit tests that depend on ZODB.tests.utils from
  test_transaction (these are actually integration tests).